--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .datepicker-container {
   background-color: #fff;
   direction: ltr;
@@ -15,7 +17,7 @@
 }
 
 .datepicker-container::before,
-.datepicker-container::after {
+ .datepicker-container::after {
   border: 5px solid transparent;
   content: " ";
   display: block;
@@ -37,59 +39,59 @@
 }
 
 .datepicker-top-left,
-.datepicker-top-right {
+ .datepicker-top-right {
   border-top-color: #39f;
 }
 
 .datepicker-top-left::before,
-.datepicker-top-left::after,
-.datepicker-top-right::before,
-.datepicker-top-right::after {
+ .datepicker-top-left::after,
+ .datepicker-top-right::before,
+ .datepicker-top-right::after {
   border-top: 0;
   left: 10px;
   top: -5px;
 }
 
 .datepicker-top-left::before,
-.datepicker-top-right::before {
+ .datepicker-top-right::before {
   border-bottom-color: #39f;
 }
 
 .datepicker-top-left::after,
-.datepicker-top-right::after {
+ .datepicker-top-right::after {
   border-bottom-color: #fff;
   top: -4px;
 }
 
 .datepicker-bottom-left,
-.datepicker-bottom-right {
+ .datepicker-bottom-right {
   border-bottom-color: #39f;
 }
 
 .datepicker-bottom-left::before,
-.datepicker-bottom-left::after,
-.datepicker-bottom-right::before,
-.datepicker-bottom-right::after {
+ .datepicker-bottom-left::after,
+ .datepicker-bottom-right::before,
+ .datepicker-bottom-right::after {
   border-bottom: 0;
   bottom: -5px;
   left: 10px;
 }
 
 .datepicker-bottom-left::before,
-.datepicker-bottom-right::before {
+ .datepicker-bottom-right::before {
   border-top-color: #39f;
 }
 
 .datepicker-bottom-left::after,
-.datepicker-bottom-right::after {
+ .datepicker-bottom-right::after {
   border-top-color: #fff;
   bottom: -4px;
 }
 
 .datepicker-top-right::before,
-.datepicker-top-right::after,
-.datepicker-bottom-right::before,
-.datepicker-bottom-right::after {
+ .datepicker-top-right::after,
+ .datepicker-bottom-right::before,
+ .datepicker-bottom-right::after {
   left: auto;
   right: 10px;
 }
@@ -101,7 +103,7 @@
 }
 
 .datepicker-panel > ul::before,
-.datepicker-panel > ul::after {
+ .datepicker-panel > ul::after {
   content: " ";
   display: table;
 }
@@ -118,6 +120,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  position: relative;
   text-align: center;
   width: 30px;
 }
@@ -127,7 +130,7 @@
 }
 
 .datepicker-panel > ul > li.muted,
-.datepicker-panel > ul > li.muted:hover {
+ .datepicker-panel > ul > li.muted:hover {
   color: #999;
 }
 
@@ -140,52 +143,54 @@
 }
 
 .datepicker-panel > ul > li.picked,
-.datepicker-panel > ul > li.picked:hover {
+ .datepicker-panel > ul > li.picked:hover {
   color: #39f;
 }
 
 .datepicker-panel > ul > li.disabled,
-.datepicker-panel > ul > li.disabled:hover {
+ .datepicker-panel > ul > li.disabled:hover {
   background-color: #fff;
   color: #ccc;
   cursor: default;
 }
 
 .datepicker-panel > ul > li.disabled.highlighted,
-.datepicker-panel > ul > li.disabled:hover.highlighted {
+ .datepicker-panel > ul > li.disabled:hover.highlighted {
   background-color: #e5f2ff;
 }
 
-.datepicker-panel > ul > li.selected,
-.datepicker-panel > ul > li.selected:hover {
-  background-color: #fff;
-  color: #ccc;
-  cursor: default;
+.datepicker-panel > ul > li.selected::after {
+  color: #5f9ea0;
+  content: "●";
+  left: 50%;
+  margin-left: -5px;
+  position: absolute;
+  top: 0.8em;
+  width: 10px;
 }
 
-.datepicker-panel > ul > li.selected.highlighted,
-.datepicker-panel > ul > li.selected:hover.highlighted {
+.datepicker-panel > ul > li.selected.highlighted {
   background-color: #e5f2ff;
 }
 
 .datepicker-panel > ul > li[data-view="years prev"],
-.datepicker-panel > ul > li[data-view="year prev"],
-.datepicker-panel > ul > li[data-view="month prev"],
-.datepicker-panel > ul > li[data-view="years next"],
-.datepicker-panel > ul > li[data-view="year next"],
-.datepicker-panel > ul > li[data-view="month next"],
-.datepicker-panel > ul > li[data-view=next] {
+ .datepicker-panel > ul > li[data-view="year prev"],
+ .datepicker-panel > ul > li[data-view="month prev"],
+ .datepicker-panel > ul > li[data-view="years next"],
+ .datepicker-panel > ul > li[data-view="year next"],
+ .datepicker-panel > ul > li[data-view="month next"],
+ .datepicker-panel > ul > li[data-view=next] {
   font-size: 18px;
 }
 
 .datepicker-panel > ul > li[data-view="years current"],
-.datepicker-panel > ul > li[data-view="year current"],
-.datepicker-panel > ul > li[data-view="month current"] {
+ .datepicker-panel > ul > li[data-view="year current"],
+ .datepicker-panel > ul > li[data-view="month current"] {
   width: 150px;
 }
 
 .datepicker-panel > ul[data-view=years] > li,
-.datepicker-panel > ul[data-view=months] > li {
+ .datepicker-panel > ul[data-view=months] > li {
   height: 52.5px;
   line-height: 52.5px;
   width: 52.5px;
